
package framework;

/**
 *
 * @author c16311
 */
public abstract class Food {
    public abstract void order(int num);
}
